# edge-mining-core

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_WORKFLOW.md  DEV_TOOLS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/entities/: automation_rule.md  battery.md  battery_state.md  consumption_forecast.md  decisional_context.md  energy_monitor.md  energy_optimization_unit.md  energy_source.md  energy_state_snapshot.md  forecast.md  forecast_interval.md  forecast_power_point.md  forecast_provider.md  grid.md  grid_state.md  hash_rate.md  load_state.md  miner.md  miner_controller.md  notifier.md  optimization_policy.md  rule_engine.md  sun.md
edge-mining/: main.py
edge_mining/: __main__.py  bootstrap.py  main.py  welcome.txt
edge_mining/adapters/: __init__.py
edge_mining/adapters/domain/: __init__.py
edge_mining/adapters/domain/energy/: __init__.py  dummy_solar.py  home_assistant_api.py  home_assistant_mqtt.py  repositories.py  schemas.py
edge_mining/adapters/domain/energy_monitoring/: dummy.py  home_assistant_api.py
edge_mining/adapters/domain/forecast/: __init__.py  dummy.py  dummy_solar.py  home_assistant_api.py  repositories.py
edge_mining/adapters/domain/home_load/: __init__.py  dummy.py  repositories.py
edge_mining/adapters/domain/miner/: __init__.py  dummy.py  repositories.py  schemas.py
edge_mining/adapters/domain/notification/: dummy.py  repositories.py  telegram.py
edge_mining/adapters/domain/optimization_unit/: __init__.py  repositories.py
edge_mining/adapters/domain/performance/: __init__.py  dummy.py  repositories.py
edge_mining/adapters/domain/policy/: __init__.py  repositories.py  schemas.py
edge_mining/adapters/domain/user/: __init__.py  repositories.py
edge_mining/adapters/infrastructure/: __init__.py
edge_mining/adapters/infrastructure/api/: main_api.py  setup.py
edge_mining/adapters/infrastructure/cli/: commands.py  interactive.py  main_cli.py  setup.py  utils.py
edge_mining/adapters/infrastructure/external_services/: repositories.py  schemas.py
edge_mining/adapters/infrastructure/homeassistant/: homeassistant_api.py  utils.py
edge_mining/application/: interfaces.py
edge_mining/application/dtos/: __init__.py  miner.py
edge_mining/application/services/: ___mining_orchestrator.py  action_service.py  adapter_service.py  configuration_service.py  miner_action_service.py  mining_orchestrator.py  optimization_service.py
edge_mining/domain/: __init__.py  common.py  exceptions.py
edge_mining/domain/energy/: __init__.py  common.py  entities.py  exceptions.py  ports.py  value_objects.py
edge_mining/domain/forecast/: __init__.py  aggregate_root.py  common.py  entities.py  exceptions.py  ports.py  value_objects.py
edge_mining/domain/home_load/: __init__.py  aggregate_roots.py  common.py  entities.py  exceptions.py  ports.py  value_objects.py
edge_mining/domain/miner/: __init__.py  common.py  entities.py  exceptions.py  ports.py  value_objects.py
edge_mining/domain/notification/: __init__.py  common.py  entities.py  exceptions.py  ports.py
edge_mining/domain/optimization_unit/: __init__.py  aggregate_roots.py  common.py  exceptions.py  ports.py  value_objects.py
edge_mining/domain/performance/: __init__.py  common.py  entities.py  exceptions.py  ports.py  values_objects.py
edge_mining/domain/policy/: __init__.py  aggregate_roots.py  common.py  entities.py  exceptions.py  ports.py  services.py  value_objects.py
edge_mining/domain/user/: __init__.py  common.py  entities.py  ports.py
edge_mining/shared/: __init__.py  infrastructure.py
edge_mining/shared/adapter_configs/: __init__.py  energy.py  external_services.py  forecast.py  home_load.py  miner.py  notification.py  performance.py
edge_mining/shared/adapter_maps/: __init__.py  energy.py  external_services.py  forecast.py  home_load.py  miner.py  notification.py  performance.py
edge_mining/shared/external_service/: port.py
edge_mining/shared/external_services/: common.py  entities.py  exceptions.py  ports.py  value_objects.py
edge_mining/shared/interfaces/: __init__.py  config.py  factories.py
edge_mining/shared/logging/: port.py
edge_mining/shared/scheduler/: port.py
edge_mining/shared/settings/: common.py  ports.py  settings.py
optimization_policies/: 550e8400-e29b-41d4-a716-446655440000.yaml
rules_examples/start/: advanced_start_rules.yaml  basic_start_rules.yaml
rules_examples/stop/: advanced_stop_rules.yaml  basic_stop_rules.yaml
tests/: test_custom_rule_engine.py  test_rule_evaluator.py
tests/unit/adapters/: __init__.py
tests/unit/domain/: __init__.py
(+54 files in other folders)
